--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,18 @@
   height: 20px;
 }
 
+.logo {
+  font-size: 40px;
+  font-family: var(--logo-font);
+  color: var(--text-color-light);
+}
+
+.search-input {
+}
+
 .icon-search {
-  width: 18px;
-  height: 17px;
+  width: 248px;
+  height: 44px;
 }
 
 .icon-favorite-light {
