--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,8 @@
 @import-normalize;
 
 :root {
-  --header-gradient: radial-gradient(
-    circle,
+  --header-gradient: linear-gradient(
+    90deg,
     rgba(0, 175, 143, 1) 0%,
     rgba(199, 108, 255, 1) 100%
   );
@@ -11,8 +11,7 @@
   --price-color: #ff7a00;
   --logo-font: 'Barrio', system-ui;
 }
-
-p,
+s p,
 h1,
 h2,
 h3,
