--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 /* --------- HEADER ---------*/
 .header {
+  height: 72px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -9,10 +10,12 @@
 .header-navigation {
   display: flex;
   align-items: center;
-  column-gap: 20px;
+  column-gap: 92px;
 }
 
 .header-actions {
+  display: flex;
+  column-gap: 28px;
 }
 
 .icon-menu {
@@ -33,6 +36,7 @@
 .search-input {
   width: 248px;
   height: 44px;
+  padding-left: 24px;
   border: 1px solid white;
   border-radius: 4px 0 0 4px;
   background-color: #eeeeee;
@@ -75,8 +79,18 @@
 
 /* --------- MAIN ---------*/
 /* --- Види товарів --- */
+.menu-list {
+  padding-top: 44px;
+  font-size: 24px;
+}
 
 /* --- Реклама --- */
+.advertising {
+  height: 252px;
+  background-size: cover;
+  background-position: center;
+  background-image: url(/images/tennis.jpg);
+}
 
 /* --- Популярні --- */
 .icon-favorite-dark {
