--- a/css/style.css
+++ b/css/style.css
@@ -87,9 +87,22 @@
 /* --- Реклама --- */
 .advertising {
   height: 252px;
+  padding: 24px 60px;
+  display: flex;
+  justify-content: end;
   background-size: cover;
   background-position: center;
   background-image: url(/images/tennis.jpg);
+}
+
+.advertising-text {
+  width: 312px;
+  padding: 40px 24px;
+  font-size: 24px;
+  line-height: 1.6em;
+  border-radius: 16px;
+  color: white;
+  background-color: #c3c943;
 }
 
 /* --- Популярні --- */
