--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,7 @@
 
 /* --- Реклама --- */
 .advertising {
+  position: relative;
   height: 252px;
   padding: 24px 60px;
   display: flex;
@@ -103,6 +104,12 @@
   border-radius: 16px;
   color: white;
   background-color: #c3c943;
+}
+
+.icon-arrow-left,
+.icon-arrow-right {
+  width: 28px;
+  height: 28px;
 }
 
 /* --- Популярні --- */
